Update HTML Files

--- a/Our-shop.html
+++ b/Our-shop.html
@@ -361,6 +361,9 @@
         </div>
         <!-- End Footer -->
     </div>
+        
+    <!-- Script File -->
+    <script src="js/lugx-gaming.js"></script>
 </body>
 
 </html>
