--- a/product-details.html
+++ b/product-details.html
@@ -214,6 +214,9 @@
             </div>
         </div>
         <!-- End Footer -->
+            
+        <!-- Script File -->
+        <script src="js/lugx-gaming.js"></script>
 </body>
 
 </html>
