--- a/index.html
+++ b/index.html
@@ -355,6 +355,9 @@
         </div>
     </div>
     <!-- End Footer -->
+    
+    <!-- Script File -->
+    <script src="js/lugx-gaming.js"></script>
 </body>
 
 </html>
